In which our hero introduced a new DOM parsing

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = libs/csafestring
 	url = https://github.com/maximilianvoss/csafestring.git
 	branch = master
+[submodule "libs/lexbor"]
+	path = libs/lexbor
+	url = git@github.com:lexbor/lexbor.git
