In which our hero fixed the submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,4 @@
 	branch = master
 [submodule "libs/lexbor"]
 	path = libs/lexbor
-	url = https://github.com/lexbor/lexbor.gits
+	url = https://github.com/lexbor/lexbor.git
