In which our hero updated the travis config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -DCLOGGER_LEVEL=2 -DCLOGGER_SDL")
     set(CMAKE_INSTALL_PREFIX /usr/local)
 elseif ("${CMAKE_BUILD_TYPE}" STREQUAL "Test")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -O3 -DCLOGGER_LEVEL=2 -DCLOGGER_STDOUT")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -O3 -DCLOGGER_STDOUT")
 else ()
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -O3 -DCLOGGER_LEVEL=1 -DCLOGGER_SDL")
 endif ()
