In which our hero updated the travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,16 @@ language: c
 compiler:
   - gcc
 
+before_script:
+  - (git clone https://github.com/maximilianvoss/csafestring.git && cd csafestring && cmake -G "Unix Makefiles" && make && sudo make install)
+  - (git clone https://github.com/maximilianvoss/casserts.git && cd casserts && cmake -G "Unix Makefiles" && make && sudo make install)
+  - (git clone https://github.com/maximilianvoss/clogger.git && cd clogger && cmake -G "Unix Makefiles" && make && sudo make install)
+  - (git clone https://github.com/maximilianvoss/chttp.git && cd chttp && cmake -G "Unix Makefiles" && make && sudo make install)
+  - (git clone https://github.com/maximilianvoss/acll.git && cd acll && cmake -G "Unix Makefiles" && make && sudo make install)
+  - (git clone https://github.com/maximilianvoss/json2map.git && cd json2map && cmake -G "Unix Makefiles" && make && sudo make install)
+  - (git clone https://github.com/maximilianvoss/romlibrary.git && cd romlibrary && cmake -G "Unix Makefiles" && make && sudo make install)
+  - (git clone https://github.com/lexbor/lexbor.git && cd lexbor && cmake -G "Unix Makefiles" && make && sudo make install)
+
 before_install:
   - sudo apt-get update
   - sudo apt-get -y install libsdl2-ttf-dev libsdl2-image-dev libsdl2-dev libcurl4-openssl-dev libsqlite3-dev libcurl4-openssl-dev
