In which our hero updated the travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ before_install:
   - sudo apt-get -y install libsdl2-ttf-dev libsdl2-image-dev libsdl2-dev libcurl4-openssl-dev libsqlite3-dev libcurl4-openssl-dev
 
 script:
-  - cmake -G "Unix Makefiles" && make && make test ARGS=j16
+  - cmake -G "Unix Makefiles" && make
